Fix Search Pagination, Add React Redux, and Add Login

--- a/src/pages/search/pagination.css
+++ b/src/pages/search/pagination.css
@@ -41,3 +41,13 @@
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
 }
+
+.spinner-grow {
+    width: 70px;
+    height: 70px;
+}
+
+.spinner-border {
+    width: 150px;
+    height: 150px;
+}
